[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "listingsapi"
version = "0.5.0"
description = "Python SDK for listingsAPI — listings, reviews, posts, and analytics for local marketing"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "listingsAPI", email = "support@listingsapi.com" }]
license = { file = "LICENSE" }
keywords = ["listingsapi", "local-seo", "listings", "reviews", "gbp", "api"]
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://www.listingsapi.com"
Documentation = "https://docs.listingsapi.com/sdks/python"
Source = "https://github.com/synup/listingsapi-python-sdk"
Issues = "https://github.com/synup/listingsapi-python-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "requests-mock>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
