[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "listingsapi"
version = "0.5.1"
description = "Python SDK for listingsAPI — listings, reviews, posts, and analytics for local marketing"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "listingsAPI", email = "support@listingsapi.com" }]
license = { file = "LICENSE" }
keywords = ["listingsapi", "local-seo", "listings", "reviews", "gbp", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://www.listingsapi.com"
Documentation = "https://docs.listingsapi.com/sdks/python"
Source = "https://docs.listingsapi.com/sdks/python"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "requests-mock>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
listingsapi = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
